<resources>
	<string name="app_name">BPM Tapper</string>
	<string name="start">Start tapping</string>
	<string name="keep">" Keep tapping"</string>
	<string name="bpm">BPM</string>
	<string name="tap">TAP</string>
	<string name="reset">RESET</string>
	<string name="dark_mode">Dark mode</string>
	<string name="light_mode">Light mode</string>
	<string name="auto_theme">Auto theme</string>
	<string name="pick_color">Pick a color</string>
	<string name="change_font">Change font</string>
	<string name="left_hand">Left hand</string>
	<string name="right_hand">Right hand</string>
	<string name="reading">Reading</string>
	<string name="right_state">Right hand state</string>
	<string name="left_state">Left hand state</string>
</resources>